# compound

./: .gitignore  README.md  config.yaml  pyproject.toml  score_boltz2.py
data/: my_results_rxn1.csv  my_results_rxn2.csv  nova_results_Molecules_RXN1.csv  nova_results_Molecules_RXN2.csv
scripts/: fetch-nova-msa.sh  requirements-boltz-extra.txt  run.sh  score_user_molecule.py  setup-all.sh  setup-boltz-gpu.sh
src/molecule_active_search.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/molsearch/: __init__.py  cli.py  config.py  db.py  features.py  history.py  molecule_id.py  pipeline.py  reactions.py  scorer.py  selector.py  validator_score.py
tests/: test_history.py  test_molecule_id.py  test_pipeline.py  test_pipeline_role_filter.py  test_scorer.py  test_selector.py  test_validator_score_alignment.py
