[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molecule-active-search"
version = "0.1.0"
description = "Duplicate-aware anchored active search for compute-efficient molecule scoring"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "MolSearch"}]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
catboost = ["catboost>=1.2"]
rdkit = ["rdkit"]
dev = ["pytest>=7.4"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
